--- a/portafolio.html
+++ b/portafolio.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/Screenshot_1.png" alt="wikipedia">
+    <div style="height:100px;"><a href="index.html">Volver</a></div>
+    <table>
+        <tr>
+            <td>
+                <img src="img/Screenshot_1.png" alt="wikipedia">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
